--- a/users/oreManage.html
+++ b/users/oreManage.html
@@ -132,6 +132,41 @@
 		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
+//			mui.init({
+//				pullRefresh: {
+//					container: '#pullrefresh',
+//					down: {
+//						callback: pulldownRefresh
+//					},
+//					up: {
+//						contentrefresh: '正在加载...',
+//						callback: pullupRefresh
+//					}
+//				}
+//			});
+				/**
+			 * 下拉刷新具体业务实现
+			 */
+//			function pulldownRefresh() {
+//				setTimeout(function() {
+//					loadmillList(); // 获取矿机列表
+//					var table = document.body.querySelector('.mui-table-view');
+//					var cells = document.body.querySelectorAll('.mui-table-view-cell');
+////					for (var i = cells.length, len = i + 3; i < len; i++) {
+////						var li = document.createElement('div');
+////						li.className = 'mui-table-view-cell';
+////						li.innerHTML = '<a class="mui-navigate-right">Item ' + (i + 1) + '</a>';
+////						//下拉刷新，新纪录插到最前面；
+////						table.insertBefore(li, table.firstChild);
+////					}
+//					table.insertBefore(cart_list, table.firstChild);
+////					$('#cart_list').html(cart_list);
+//					mui('#pullrefresh').pullRefresh().endPulldownToRefresh(); //refresh completed
+//				}, 1500);
+//			}
+//			var count = 0;
+//			var cart_list;
+			// 滚动end
 			var page = 1; //第几页
 			var pageSize = 4; // 每页多少条记录，-1 不分页
 			loadmillList(); // 获取矿机列表
