--- a/property/account-main.html
+++ b/property/account-main.html
@@ -142,6 +142,7 @@
 				})
 				// 导出助记词
 				$("#export").on("click", function() {
+					alert(purseInfo[purseIndex].address);
 					//					mui.openWindow({
 					//						id: "/property/backup-wallet.html",
 					//						url: "/property/backup-wallet.html",
