--- a/users/oreManage.html
+++ b/users/oreManage.html
@@ -168,13 +168,13 @@
 //			var cart_list;
 			// 滚动end
 			var page = 1; //第几页
-			var pageSize = 4; // 每页多少条记录，-1 不分页
+			var pageSize = 10; // 每页多少条记录，-1 不分页
 			loadmillList(); // 获取矿机列表
 //			loadStateList(); // 获取矿机状态列表
 			var alertState;
 			var currentId;
 			var stateList = []; //矿机状态列表
-			var millList = []; // 矿机列表
+			var millList; // 矿机列表
 			var balanceTotal = 0; // 收益总和
 			var millName;// 矿机名称
 			var loadingList = "";
@@ -230,7 +230,7 @@
 				$('.loading').html('加载中...');
 				// 点击加载更多
 				$('.loading_box').on("click",function(){
-					if($('.loading').html() == '加载完成'){
+					if($('.loading').html() == '已加载全部'){
 						mui.toast('已加载全部内容');
 						return false;
 					}
@@ -335,11 +335,6 @@
 						mui.hideLoading();
 						if(ret.success) {
 							mui.toast('加载成功');
-							if ($(".miner_box").length > ret.data.count){
-								$('.loading').html('加载完成');
-							} else {
-								$('.loading').html('加载更多');
-							}
 							$.each(ret.data.list, function(i, t) {
 								if (t.status == 5 || t.status == 11){
 									loadingList +=
@@ -411,6 +406,11 @@
 							// Div.className = 'mui-table-view-cell';
 							Div.innerHTML = loadingList;
 							minerList.appendChild(Div);
+							if ($(".miner_box").length >= ret.data.count){
+								$('.loading').html('已加载全部');
+							} else {
+								$('.loading').html('加载更多');
+							}
 						} else {
 							mui.toast(ret.msg);
 						}
@@ -563,12 +563,12 @@
 						mui.hideLoading();
 						if(ret.success) {
 							mui.toast('加载成功');
-							millList = ret.data.list; //矿机列表
-							if (millList.length < pageSize){
-								$('.loading').html('加载完成');
-							} else {
-								$('.loading').html('加载更多');
-							}
+							millList = ret.data; //矿机列表
+//							if (millList.length < pageSize){
+//								$('.loading').html('已加载全部');
+//							} else {
+//								$('.loading').html('加载更多');
+//							}
 //							console.log(millList.length);
 							complete(); // 最终合成
 //							for(var b =0;b<millList.length;b++){
@@ -610,8 +610,8 @@
 			});
 			// 合成页面
 			function complete() {
-				if(millList.length > 0) {
-					$.each(millList, function(i, t) {
+				if(millList.list.length > 0) {
+					$.each(millList.list, function(i, t) {
 						//矿机状态值：
 						//0 : 已发出【解绑矿机】指令
 						//1 : 已收到【解绑矿机】指令
@@ -806,6 +806,11 @@
 //						}
 					});
 					$('#cart_list').html(cart_list);
+				}
+				if ($(".miner_box").length >= millList.count){
+					$('.loading').html('已加载全部');
+				} else {
+					$('.loading').html('加载更多');
 				}
 			}
 		
