--- a/pages/mine.html
+++ b/pages/mine.html
@@ -22,11 +22,11 @@
 		</div>
 		<div class="content operation_list">
 			<ul class="list">
-				<li class="newact" onclick="go_detail('tradeRecord')">
+				<!--<li class="newact" onclick="go_detail('tradeRecord')">
 					<i class="iconfont icon-zichan"></i>
 					<p>交易记录</p>
 					<span class="mui-icon mui-icon-arrowright"></span>
-				</li>
+				</li>-->
 				<li class="newact" onclick="go_detail('oreManage')">
 					<i class="iconfont icon-shebeiguanli"></i>
 					<p>矿机管理</p>
