--- a/property/wallet-address.html
+++ b/property/wallet-address.html
@@ -61,7 +61,7 @@
 				}
 			})
 			if (navigator.userAgent.toLowerCase().indexOf("android") > -1) {
-				alert('android');
+//				alert('android');
 				// 复制地址 
 				$(document).ready(function(){
 					var fooText=$("#addressBox").val();
@@ -75,7 +75,7 @@
 					});
 				})
 			} else {
-				alert('ios');
+//				alert('ios');
 				$('#copyAddress').click(function() {
 					const el = document.createElement('input');
 					const btn = document.getElementById('copyAddress');
