--- a/pages/property.html
+++ b/pages/property.html
@@ -66,6 +66,7 @@
 			var balance;// 账户余额
 			var state;//获取账户是否成功
 			showDcarPurse();
+			// gerAccountBalance();
 			showEthPurse();
 			$("#createDcar").on("click", function(){
 				if (!store.get("userInfo")) {
@@ -121,8 +122,24 @@
 					} else {
 						var dcar = 1;
 						var item='';
-//						this.ethBalance(eth[0].address, '.eth_money');
-						gerAccountBalance();
+						for (var i=0;i<arr.length;i++) {
+							(function(index){
+								var Index = i;
+								// 方法一：web3.js获取余额
+								address = arr[Index].address;
+								address = address.replace(address.substr(0, 2), '0x');
+								var web3 = new Web3(DCARapi);
+								web3.eth.getBalance(address).then(function (result) {
+									console.log(Index);
+									arr[Index].money = web3.utils.fromWei(result, 'ether');
+									mui.toast('成功');
+									store.set('dcarPurse', arr);
+								}).catch(function () {
+									state = false;
+									mui.toast('链接不到以太坊区块链网络');
+								});
+							})(i)
+						}
 						$.each(arr, function(i, t) {
 							item+='<div class="blue_bg card_one mui-row">'
 										+'<div class="mui-col-sm-3 mui-col-xs-3" onclick="go_detail(' + i + "," + dcar+')">'
@@ -130,8 +147,8 @@
 										+'</div>'
 										+'<div class="mui-col-sm-6 mui-col-xs-6" onclick="go_detail(' + i + "," + dcar+')">'
 											+'<div>'+ t.name +'</div>'
-											+'<div>'+ t.money +'DCAR</div>'
-											+'<div>&yen;'+ t.money +'</div>'
+											+'<div>'+ Math.floor(t.money) +'DCAR</div>'
+											+'<div>&yen;'+ Math.floor(t.money) +'</div>'
 											+'<div>'+ t.address +'</div>'
 										+'</div>'
 										+'<div class="mui-col-sm-3 mui-col-xs-3">'
@@ -209,25 +226,23 @@
 			// 查看账户余额
 			function gerAccountBalance() {
 				var arr = store.get('dcarPurse');
-//				alert(arr[0].money);
 				for (var i=0;i<arr.length;i++){
-					arr[i].index = i;
-//					alert(i);
-					// 方法一：web3.js获取余额
-					address = arr[i].address;
-					address = address.replace(address.substr(0, 2), '0x');
-					console.log(address);
-					var web3 = new Web3(DCARapi);
-					web3.eth.getBalance(address)
-					.then(function (result) {
-						var index = this.index;
-						alert(index);
-						mui.toast('成功');
-//						state = true;
-					}).catch(function () {
-						state = false;
-						mui.toast('链接不到以太坊区块链网络');
-					});
+					(function(index){
+						var Index = i;
+						// 方法一：web3.js获取余额
+						address = arr[Index].address;
+						address = address.replace(address.substr(0, 2), '0x');
+						var web3 = new Web3(DCARapi);
+						web3.eth.getBalance(address).then(function (result) {
+							console.log(Index);
+							arr[Index].money = web3.utils.fromWei(result, 'ether');
+							mui.toast('成功');
+							store.set('dcarPurse', arr);
+						}).catch(function () {
+							state = false;
+							mui.toast('链接不到以太坊区块链网络');
+						});
+					})(i)
 //					if (state == true){
 //						arr[i].money = web3.utils.fromWei(result, 'ether');
 //					}
@@ -285,7 +300,7 @@
 //						}
 //					});
 					// 方法三end
-				}
+			    }
 			}
 		</script>
 	</body>
